--- a/package.json
+++ b/package.json
@@ -1,62 +1,10 @@
 {
-  "name": "nestjs-azure-service-bus",
+  "name": "nestjs-azure-sdk",
   "version": "0.0.1",
-  "description": "",
+  "description": "Azure SDK for NestJS (Node.js)",
   "author": "Julian Dawson",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "lint": "eslint --ext ts --fix lib",
-    "format": "prettier --write \"lib/**/*.ts\"",
-    "precommit": "lint-staged",
-    "prepublish:npm": "npm run build",
-    "publish:npm": "npm publish --access public",
-    "prepublish:next": "npm run build",
-    "publish:next": "npm publish --access public --tag next",
-    "prerelease": "npm run build",
-    "release": "release-it"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "peerDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/microservices": "^8.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^7.1.0"
-  },
-  "devDependencies": {
-    "@azure/service-bus": "7.5.1",
-    "@nestjs/common": "8.4.0",
-    "@nestjs/core": "8.4.0",
-    "@nestjs/microservices": "8.4.0",
-    "@typescript-eslint/eslint-plugin": "5.14.0",
-    "@typescript-eslint/parser": "5.14.0",
-    "eslint": "8.10.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "husky": "7.0.4",
-    "lint-staged": "12.3.5",
-    "prettier": "2.5.1",
-    "reflect-metadata": "0.1.13",
-    "release-it": "14.12.5",
-    "rxjs": "7.5.5",
-    "typescript": "4.6.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gllawuk/nestjs-azure-service-bus.git"
-  },
-  "bugs": {
-    "url": "https://github.com/gllawuk/nestjs-azure-service-bus/issues"
-  },
-  "homepage": "https://github.com/gllawuk/nestjs-azure-service-bus"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
