--- a/sdk/service-bus/package.json
+++ b/sdk/service-bus/package.json
@@ -13,8 +13,7 @@
     "publish:npm": "npm publish --access public",
     "prepublish:next": "npm run build",
     "publish:next": "npm publish --access public --tag next",
-    "prerelease": "npm run build",
-    "release": "release-it"
+    "prerelease": "npm run build"
   },
   "lint-staged": {
     "*.ts": [
@@ -47,7 +46,6 @@
     "lint-staged": "12.3.5",
     "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "release-it": "14.12.5",
     "rxjs": "7.5.5",
     "typescript": "4.6.2"
   }
