--- a/sdk/service-bus/package.json
+++ b/sdk/service-bus/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@gllawuk/nestjs-azure-service-bus",
   "version": "0.0.1",
-  "description": "Custom transport for using [Azure Service Bus](https://azure.microsoft.com/en-us/services/service-bus) with [NestJS](https://nestjs.com).",
+  "description": "NestJS custom transport for Azure Service Bus",
+  "homepage": "https://github.com/gllawuk/nestjs-azure-sdk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gllawuk/nestjs-azure-sdk/tree/main/sdk/service-bus"
+  },
+  "bugs": {
+    "url": "https://github.com/gllawuk/nestjs-azure-sdk/issues"
+  },
   "author": "Julian Dawson",
   "license": "MIT",
   "scripts": {
