refactor: Correct package homepage and repository links

--- a/sdk/service-bus/package.json
+++ b/sdk/service-bus/package.json
@@ -2,11 +2,8 @@
   "name": "@gllawuk/nestjs-azure-service-bus",
   "version": "0.0.5",
   "description": "NestJS custom transport for Azure Service Bus",
-  "homepage": "https://github.com/gllawuk/nestjs-azure-sdk/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gllawuk/nestjs-azure-sdk/tree/main/sdk/service-bus/"
-  },
+  "homepage": "https://github.com/gllawuk/nestjs-azure-sdk/tree/main/sdk/service-bus",
+  "repository": "github:gllawuk/nestjs-azure-sdk",
   "bugs": {
     "url": "https://github.com/gllawuk/nestjs-azure-sdk/issues/"
   },
